--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 	background-image:url(co.jpg);
 	font-size:25px;
 	text-align:center;
-	background-attachment: fixed; /*stałe względem okna */
+	background-attachment: fixed; 
 	background-repeat: no-repeat;
 }
 #div1{
@@ -78,7 +78,20 @@ font-weight:bold;
 padding:10px;
 margin:15px;
 }
-
+#menu li{
+font-size: 15px;
+background-color:white;
+float:left;
+display: block;
+width:10vw;
+height:25px;
+cursor: pointer;
+color: #607d8b;
+border-radius:10px;
+border-width: 50px;
+transition: all 0.25s ease-out;
+transform: rotate(-2.9deg);
+box-shadow:  0.8em 0.8em 0.8em;
 
 
 
