--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 	background-image:url(co.jpg);
 	font-size:25px;
 	text-align:center;
-	background-attachment: fixed; 
+	background-attachment: fixed; /*responsywnosc */
 	background-repeat: no-repeat;
 }
 #div1{
@@ -94,12 +94,26 @@ transform: rotate(-2.9deg);
 box-shadow:  0.8em 0.8em 0.8em;
 
 
+}
+#menu li li{
+float: none;
+}
+#menu li li a{
+text-decoration: none;
+color:black;
+}
+#menu li ul{
+display: none;
+padding:0px;
+}
 
 
 
 
-
-
+span{
+	
+	
+}
 
 	
 
