--- a/style.css
+++ b/style.css
@@ -77,7 +77,6 @@ font-style: oblique; /*kursywa*/
 font-weight:bold;
 padding:10px;
 margin:15px;
-display: block;
 }
 #menu li{
 font-size: 15px;
@@ -95,7 +94,26 @@ transform: rotate(-2.9deg);
 box-shadow:  0.8em 0.8em 0.8em;
 
 
+}
+#menu li li{
+float: none;
+}
+#menu li li a{
+text-decoration: none;
+color:black;
+}
+#menu li ul{
+display: none;
+padding:0px;
+}
 
+
+
+
+span{
+	
+	
+}
 
 	
 
